<resources>
    <string name="app_name">MiniActv2</string>
    <string name="inputHint">Bye message</string>
    <string name="introduce_message">Introduce Message:</string>
    <string name="number_repetitions">Introduce number of repetitions:</string>
    <string name="top_message">Hello World!</string>
    <string name="goto_bye">Go to Bye Screen</string>
    <string name="buttonBack">Go back</string>
    <string name="result">Default Result</string>
    <string name="error_number_0">Number should be higher than 0</string>
    <string name="error_number_empty">Number shouldn\'t be empty!</string>
    <string name="error_message_empty">Message can\'t be empty!</string>
    <string name="error_message_include_bye">Message should include bye!</string>
    <string name="bye_keyword">bye</string>
    <string name="numberHint">Example: 2</string>
</resources>